# tp_advcpp_homework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hw1/: CMakeLists.txt
hw1/include/: pipe.hpp  process.h
hw1/src/: main.cpp  pipe.cpp  process.cpp
hw1/tests/: test.cpp  test_hw1
hw2/: CMakeLists.txt  README.md
hw2/include/: BaseLogger.hpp  FileLogger.hpp  Global.hpp  LogInitializer.hpp  LogOutputModifier.hpp  Logger.hpp  StderrLogger.hpp  StdoutLogger.hpp
hw2/src/: BaseLogger.cpp  FileLogger.cpp  Global.cpp  LogInitializer.cpp  LogOutputModifier.cpp  Logger.cpp  StderrLogger.cpp  StdoutLogger.cpp  main.cpp
hw3/: CMakeLists.txt  README.md
hw3/include/: Connection.hpp  Server.hpp  Socket.hpp
hw3/src/: Connection.cpp  Server.cpp  Socket.cpp  client.cpp  main.cpp  server.cpp
hw3/tcp/include/: Connection.hpp  Server.hpp
hw3/tcp/src/: Connection.cpp  Server.cpp
hw4/: CMakeLists.txt  README.md
hw4/src/: server.cpp
hw4/tcp_epoll/include/: Connection.hpp  FileDescriptor.hpp  Server.hpp
hw4/tcp_epoll/src/: Connection.cpp  FileDescriptor.cpp  Server.cpp
hw5/: CMakeLists.txt  README.md
hw5/shmem/include/: Map.hpp  Semaphore.hpp  ShMemAlloc.hpp  ShmemAlloc.hpp
hw5/shmem/src/: Map.cpp  Semaphore.cpp  ShMemAlloc.cpp  ShmemAlloc.cpp
hw5/src/: main.cpp
include/: process.h
process/include/: process.h
process/src/: process.cpp
src/: process.cpp
